--- a/index.html
+++ b/index.html
@@ -8,23 +8,43 @@
 </head>
 <body>
 
+<div class="container">
+
+
+<div id="header">
 <h1>Jacob Luft</h1>
 
-<h2>About</h2>
-<h2>Portfolio</h2>
-<h2>Contact</h2>
-
-
-<section>
-<div>About Me
-
-<p>Text for about me goes here</p>
-
+<p id="Links">About &nbsp;&nbsp;|&nbsp;&nbsp; Portfolio &nbsp;&nbsp;|&nbsp;&nbsp; Contact</p>
 </div>
 
-<div>Connect with Me</div>
+<div class="wrapper">
 
-</section>
+<div id="header">
+
+<div id="aboutme">
+About Me
+
+<div id="article">
+<img src="assets/images/headshot.png">
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+</p>
+<p>
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+</div>
+</div>
+
+<div id="connect">
+Connect with Me
+
+<div id="icons">
+<a target="_blank" href="https://www.linkedin.com/in/jacob-luft-43a8b93/"><img class="icon1" src="assets/images/linkedin.png"></a>
+<a target="_blank" href="https://twitter.com/jbluft"><img class="icon2" src="assets/images/twitter.png"></a>
+<a target="_blank" href="https://www.facebook.com/jbluft"><img class="icon3" src="assets/images/facebook.png"></a>
+</div>
+
+</div>
+</div>
 
 <footer>@Copyright 2017 Jacob Luft
 </footer>
